# Metadron-Fund-Local

./: .env.example  .env.vault.gpg  .gitignore  ARCHITECTURE.md  AUDIT_FINAL.md  AUDIT_REPORT.md  BOBBY_BUILD_INSTRUCTIONS.md  BOBBY_SESSION_AUDIT.md  CLAUDE.md  DEPLOYMENT.md  FIX_INSTRUCTIONS.md  HETZNER_DEPLOYMENT_PLAN.md  INTEGRATION_STATUS.md  MIROFISH_INTEGRATION_SPEC.md  bootstrap.py  ecosystem.config.cjs  generate_pdf.py  metadron_evaluation.md  openbb_universe.py  package-lock.json  package.json  platform_orchestrator.py  pm2-start.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_close.py  run_hourly.py  run_open.py  run_overnight_backtest.py  setup.sh  start.sh  tailwind.config.ts
Architecture_DNA/: AI_SESSION_INSTRUCTIONS.md  ARCHITECTURE_DNA.md  AUDIT_BUGS_REVIEW_2026-03-28.md  FRONTEND_BUILD_INSTRUCTIONS.md  FRONTEND_MODULES.md  GEX44_SETUP_GUIDE.md  GPU_INFRASTRUCTURE_PLAN.md  SECURITY_FIX_BACKEND_AUTH.md
News engine/: README.md  package-lock.json  package.json
PRE_DEPLOY/: 00_OVERVIEW.md  01_GEX44_SERVER.md  02_APPLICATION.md  03_NGINX_SSL.md  04_MONITORING.md  05_API_KEYS.md  06_LAUNCH_CHECKLIST.md
Qwen 2.5-7b/: README.md
client/: index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts
config/: heartbeat_config.py  repos.yaml
cookbook_integration/: __init__.py  file_utils.py  integration_config.json  skill_utils.py
core/: __init__.py  platform.py  portfolio.py  signals.py
deploy/: index.html  login.html
engine/: __init__.py  live_loop_orchestrator.py  pm2_integration.py
governance/: classify_credit.py  credit_classification.json
intelligence_platform/: INTELLIGENCE_PLATFORM_REGISTRY.md  README.md  __init__.py
marketing/: index.html  login.html
news-engine/: package.json
(+439 files in other folders)
