[project]
name = "metadron-capital"
version = "0.1.0"
description = "AI-driven investment platform — surpassing human neural assessment of markets through money velocity analysis, cyclical/secular signal decomposition, and multi-agent portfolio intelligence"
requires-python = ">=3.11"
dependencies = [
    # Core scientific stack
    "numpy>=2.0",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    # Deep learning
    "torch>=2.0",
    "tensorflow>=2.15",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    # Financial data & analysis — OpenBB primary, yfinance fallback
    "openbb>=4.0",
    "openbb-yfinance>=1.0",
    "openbb-fred>=1.0",
    "openbb-sec>=1.0",
    "openbb-cboe>=1.0",
    "openbb-nasdaq>=1.0",
    "openbb-ecb>=1.0",
    "openbb-federal-reserve>=1.0",
    "openbb-intrinio>=1.0",
    "openbb-fmp>=1.0",
    "openbb-tiingo>=1.0",
    "openbb-polygon>=1.0",
    "openbb-oecd>=1.0",
    "openbb-finra>=1.0",
    "yfinance>=0.2",
    "statsmodels>=0.14",
    "fredapi>=0.5",
    # AI/LLM orchestration
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "anthropic>=0.50",
    "openai>=1.0",
    # API & serving
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "httpx>=0.27",
    "pydantic>=2.4",
    # Visualization
    "plotly>=5.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Utilities
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "black>=24.0", "ruff>=0.3"]

[tool.ruff]
line-length = 120
target-version = "py311"
